// Vitest Snapshot v1

exports[`uml > Should keep content as is 1`] = `
"<div class=\\"uml\\" title=\\"\\">
Text with **bold** and \`code\`.
</div>"
`;

exports[`uml > Should render with options 1`] = `
"<Test class=\\"test\\" title=\\"\\">
abc

def
</Test>"
`;

exports[`uml > Should render without options 1`] = `
"<div class=\\"uml\\" title=\\"\\">
abc
</div>"
`;

exports[`uml > shoud keep content as is 1`] = `
"<div class=\\"uml\\" title=\\"\\">
Text with **bold** and \`code\`.
</div>"
`;

exports[`uml > shoud render with options 1`] = `
"<Test class=\\"test\\" title=\\"\\">
abc

def
</Test>"
`;

exports[`uml > shoud render without options 1`] = `
"<div class=\\"uml\\" title=\\"\\">
abc
</div>"
`;
